corrected contrast

--- a/css/index-small.css
+++ b/css/index-small.css
@@ -174,3 +174,11 @@ table, th, td {
 	background-color: #3BCCEC;
 	font-family: Helvetica, sans-serif;
 }
+
+.john_image{
+	width: 200px;
+}
+
+.sara_image{
+	width: 200px;
+}
